--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 				<div class="col-sm-8 text-center">
 					<h1>About Us</h1>
 					<br>
-					<p>AweChords is an a cappella group at UCLA. Originally named “Nhip-Am”, it was formed in 2006 as a choir for the annual Vietnamese Culture Night. Since then, the group has expanded to more diverse audiences throughout Los Angeles and in 2010 regrouped to become the AweChords.</p>
-			 		<br>
-					<p>This newly formed co-ed a cappella group was founded to expand each of its members' musical horizons and to extend to the public a joy for music. In exploring the versatility of their voices and the creative license that comes with arranging/composing, this group strives to further their knowledge of music and apply that knowledge to serve the greater LA community.</p>
+					<div class="about_body">
+						<p>AweChords is an a cappella group at UCLA. Originally named “Nhip-Am”, it was formed in 2006 as a choir for the annual Vietnamese Culture Night. Since then, the group has expanded to more diverse audiences throughout Los Angeles and in 2010 regrouped to become the AweChords.</p>
+				 		<br>
+						<p>This newly formed co-ed a cappella group was founded to expand each of its members' musical horizons and to extend to the public a joy for music. In exploring the versatility of their voices and the creative license that comes with arranging/composing, this group strives to further their knowledge of music and apply that knowledge to serve the greater LA community.</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -184,7 +186,7 @@
 							<h4>Public Relations</h4>
 							<p>Sophomore, Computer Science<br>
 							Aspirations: a software job in the digital audio field<br>
-							Audition Song: So Fly<br>
+							Audition Song: It Will Rain<br>
 							<br>
 							"Super Smash for days"</p>
 						</div>
