--- a/index.html
+++ b/index.html
@@ -11,46 +11,48 @@
 
 <body>
 	<!-- fixed nav bar -->
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#Navbar">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#home">AweChords</a>
-			</div>
+	<div id="menu">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#Navbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#home">AweChords</a>
+				</div>
 
-			<div class="collapse navbar-collapse" id="Navbar">
-				<ul class="nav navbar-nav">
-					<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#home">Home</a></li>
-					<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#about">About</a></li>
-					<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#member">Members</a></li>
-					<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#media">Media</a></li>
-					<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#events">Events</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right nav-pills">
-				    <li>
-			            <a href="https://www.facebook.com/awechords" class="btn btn-social-icon btn-facebook" target="_blank">
-			                <i class="fa fa-facebook"></i>
-			            </a>
-		            </li>
-		            
-		            <li>
-			            <a href="https://www.youtube.com/user/awechords" class="btn btn-social-icon btn-youtube" target="_blank">
-			                <i class="fa fa-youtube-play"></i>
-			            </a>
-		            </li>
-		            <li>
-			            <a href="https://soundcloud.com/awechords" class="btn btn-social-icon btn-soundcloud" target="_blank">
-			                <i class="fa fa-soundcloud"></i>
-			            </a>
-			        </li>
-				</ul>
+				<div class="collapse navbar-collapse" id="Navbar">
+					<ul class="nav navbar-nav">
+						<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#home">Home</a></li>
+						<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#about">About</a></li>
+						<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#member">Members</a></li>
+						<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#media">Media</a></li>
+						<li><a data-toggle="collapse"  data-target=".navbar-collapse" href="#events">Events</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right nav-pills">
+					    <li>
+				            <a href="https://www.facebook.com/awechords" class="btn btn-social-icon btn-facebook" target="_blank">
+				                <i class="fa fa-facebook"></i>
+				            </a>
+			            </li>
+			            
+			            <li>
+				            <a href="https://www.youtube.com/user/awechords" class="btn btn-social-icon btn-youtube" target="_blank">
+				                <i class="fa fa-youtube-play"></i>
+				            </a>
+			            </li>
+			            <li>
+				            <a href="https://soundcloud.com/awechords" class="btn btn-social-icon btn-soundcloud" target="_blank">
+				                <i class="fa fa-soundcloud"></i>
+				            </a>
+				        </li>
+					</ul>
+				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
+	</div>
 
 	<div id="home"></div>
 
